InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentMember__c/vlocity_ins__ProgramEnrollmentMember__c.object-meta.xml
<CustomObject>
    <description>A Program Enrollment Member is a participant of a public health insurance program. Master-detail child object of a Program Enrollment.</description>
    <label>Program Enrollment Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Enrollment Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>