InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentMember__c/fields/vlocity_ins__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Contact related to the member.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollment Member Contacts</relationshipLabel>
    <relationshipName>ProgramEnrollmentMemberContacts</relationshipName>
    <type>Lookup</type>
</CustomField>