InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentMember__c/fields/vlocity_ins__FirstName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FirstName__c</fullName>
    <formula>vlocity_ins__ContactId__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>