InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentMember__c/fields/vlocity_ins__LastName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LastName__c</fullName>
    <formula>vlocity_ins__ContactId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>