InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentMember__c/fields/vlocity_ins__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MiddleName__c</fullName>
    <formula>vlocity_ins__ContactId__r.vlocity_ins__MiddleName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Middle Name</label>
    <type>Text</type>
</CustomField>