InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentMember__c/fields/vlocity_ins__Role__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Role__c</fullName>
    <description>Role of the member such as Head of Household or Partner.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head of Household</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Dependent - Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>